--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -120,6 +120,10 @@
         padding-bottom: 80px;
         overflow-y: auto;
         .title {
+            .btn {
+              height: 60px;
+              margin-top: -5px;
+            }
             padding: 0;
             height: 61px;
             line-height: 61px;
@@ -317,6 +321,9 @@ span {
     }
     .skin-setttings{
       .title {
+        i.fa {
+          font-size: 16px;
+        }
         i.fa-angle-right{
           &:before{
               content: "\f00d";
