--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -7,8 +7,8 @@
       <ul class="nav navbar-top-links navbar-right">
         <li>
           {{#if state$hasOrganization}}
-            <a class="count-info open-flyout visible-sm visible-xs" data-id="organizationDetailsPage"><i class="fa fa-sitemap"></i></a>
-            <span class="open-flyout welcome-message" data-id="organizationDetailsPage">
+            <a class="count-info open-flyout visible-sm visible-xs" data-id="organizationStructure"><i class="fa fa-sitemap"></i></a>
+            <span class="open-flyout welcome-message" data-id="organizationStructure">
               {{{state$userAreasAccess}}}
             </span>
           {{else}}
