--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -1,6 +1,16 @@
 <template name="createArea">
   <form method="get" class="form-horizontal">
     <div class="form-group">
+      <label class="col-sm-2 control-label">Area Location</label>
+      <div class="col-sm-10">
+        <select name="locationId" class="form-control">
+          {{#each state$locations}}
+            <option value="{{_id}}">{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
       <label class="col-sm-2 control-label">Area Name</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" name="name" required="required">
@@ -21,6 +31,9 @@
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary col-sm-12">Create</button>
+    <div class="btn-group col-xs-12">
+      <button type="submit" class="btn btn-primary col-sm-6">Create</button>
+      <button type="button" class="btn btn-default col-sm-6 close-flyout">Close</button>
+    </div>
   </form>
 </template>
