--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -61,6 +61,9 @@
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary col-sm-12">Create</button>
+    <div class="btn-group col-xs-12">
+      <button type="submit" class="btn btn-primary col-sm-6">Create</button>
+      <button type="button" class="btn btn-default col-sm-6 close-flyout">Close</button>
+    </div>
   </form>
 </template>
