Added some deletion functionality

--- a/client/lib/components/organizations/organization_structure/view.html
+++ b/client/lib/components/organizations/organization_structure/view.html
@@ -2,14 +2,14 @@
   <h1>{{state$organization.name}}</h1>
   {{#each state$locations}}
     <ul class="list-group" style="display: block;">
-      <li class="list-group-item lead" style="display: block;">
+      <li class="list-group-item lead open-flyout location-settings" style="display: block; cursor: pointer; " data-id="locationSettings">
         {{name}}
         <span class="badge"><i class="fa fa-fw fa-cog"></i></span>
       </li>
       {{#each state$areas _id}}
         <li class="list-group-item" style="display: block;">
           {{name}}
-          <span class="badge"><i class="fa fa-fw fa-cog"></i></span>
+          <span class="badge open-flyout" data-id="areaDetails" data-params="id='{{_id}}'"><i class="fa fa-fw fa-cog"></i></span>
         </li>
       {{/each}}
     </ul>
