--- a/client/stylesheets/12_index.css
+++ b/client/stylesheets/12_index.css
@@ -114,3 +114,11 @@ li > img {
 .areaBox > a {
   white-space: inherit !important;
 }
+
+.ordering_count {
+  max-width: 120px !important;
+}
+
+.ordering_count .editable-input input {
+  max-width: 100px;
+}
