--- a/client/stylesheets/12_index.css
+++ b/client/stylesheets/12_index.css
@@ -115,6 +115,10 @@ li > img {
   white-space: inherit !important;
 }
 
-.chosen-select-width, .chosen-single, .chosen-drop {
-  min-width: 200px;
+.ordering_count {
+  max-width: 120px !important;
+}
+
+.ordering_count .editable-input input {
+  max-width: 100px;
 }
