--- a/client/lib/components/menuitems/detail/view.html
+++ b/client/lib/components/menuitems/detail/view.html
@@ -12,28 +12,14 @@
               <div class="panel-heading">
                 <h3 class="panel-title">Settings</h3>
               </div>
-              <div class="panel-body editorPanel">
+              <div class="panel-body">
                 {{> render component="editMenuItem"}}
               </div>
             </div>
           </div>
           
           <div class="col-lg-8 col-xs-12">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title">Instructions</h3>
-              </div>
-              <div class="panel-body editorPanel">
-                <p>{{{state$menu.instructions}}}<br></p>
-              </div>
-              <div class="panel-body editor hide">
-                {{> render component="textEditor" id='menuItemEditorDetail'
-              initialHtml=state$initialHTML}}
-              </div>
-              {{#if canEditMenu}}
-                <div class="panel-footer textEdit">Click here to edit</div>
-              {{/if}}
-            </div>
+            {{> render component="menuInstructions" id=state$menu._id}}
           </div>
         </div>
         <hr>
