--- a/client/lib/components/menuitems/edit/view.html
+++ b/client/lib/components/menuitems/edit/view.html
@@ -1,8 +1,8 @@
 <template name="editMenuItem">
-  <form method="get" class="form-horizontal"> 
+  <form method="get" class="form-horizontal" data-id="{{state$menu._id}}"> 
     <div class="form-group">
       <label class="col-sm-2 control-label">Category</label>
-      <div class="col-sm-10">
+      <div class="col-sm-9 pull-right">
         <a href="#" data-name="category" class="my-editable-link">{{state$myCategory.name}}</a>
         <select name="category" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
           {{#each state$categoriesList}}
@@ -17,32 +17,30 @@
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
-      <div class="col-sm-10">
+      <div class="col-sm-9 pull-right">
         {{#if state$isArchived}}
-            <span style="position: relative; top: 8px;">
-                archived
-            </span>
+          <span style="position: relative; top: 8px;">archived</span>
         {{else}}
-            <a href="#" data-name="status" class="my-editable-link">{{state$menu.status}}</a>
-            <select name="status" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
-                {{#each state$statusList}}
-                    {{# if equal this.name state$menu.status}}
-                        <option value="{{state$menu.status}}" selected="selected" >{{state$menu.status}}</option>
-                    {{else}}
-                        <option value="{{this.name}}">{{this.name}}</option>
-                    {{/ if}}
-                {{/each}}
+          <a href="#" data-name="status" class="my-editable-link">{{state$menu.status}}</a>
+          <select name="status" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
+            {{#each state$statusList}}
+              {{#if equal this.name state$menu.status}}
+                <option value="{{state$menu.status}}" selected="selected" >{{state$menu.status}}</option>
+              {{else}}
+                <option value="{{this.name}}">{{this.name}}</option>
+              {{/ if}}
+            {{/each}}
             </select>
         {{/if}}
       </div>
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Image</label>
-      <div class="col-sm-10">
+      <div class="col-sm-9 pull-right">
         <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button><br>
         <div>
           {{#if state$menu.image}}
-          <div class="file col-sm-2 uploadedImageDiv">
+          <div class="file uploadedImageDiv">
             <a href="#">
               <span class="corner"></span>
               <div class="image">
@@ -51,7 +49,7 @@
             </a>
           </div>
           {{else}}
-            <div class="file col-sm-2 uploadedNewImageDiv hide">
+            <div class="file uploadedNewImageDiv hide">
             <a href="#">
               <span class="corner"></span>
               <div class="image">
