--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -339,3 +339,8 @@ span {
   position: relative;
   border-bottom: 1px dashed;
 }
+
+.change-current-area.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
