--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -1,30 +1,34 @@
 <template name="createArea">
   <form method="get" class="form-horizontal">
     <div class="form-group">
-      <label class="col-sm-2 control-label">Area Location</label>
-      <div class="col-sm-10">
-        <select name="locationId" class="form-control">
-          {{#each state$locations}}
-            <option value="{{_id}}">{{name}}</option>
-          {{/each}}
-        </select>
-      </div>
-    </div>
-    <div class="form-group">
       <label class="col-sm-2 control-label">Area Name</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" name="name" required="required">
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label">Status</label>
+      <label class="col-sm-2 control-label">Area Location</label>
       <div class="col-sm-10">
-        <div class="btn-group" data-toggle="buttons">
-          <label class="btn btn-primary active">
+        <select name="locationId" class="form-control">
+          {{#each state$locations}}
+            {{#if state$activeLocation _id}}
+              <option value="{{_id}}" selected="selected">{{name}}</option>
+            {{else}}
+              <option value="{{_id}}">{{name}}</option>
+            {{/if}}
+          {{/each}}
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Status</label>
+      <div class="col-sm-10 col-xs-12">
+        <div class="btn-group col-xs-12" data-toggle="buttons">
+          <label class="btn btn-primary active col-xs-6">
             <input type="radio" name="status" id="enabled" autocomplete="off" value="Enabled" checked>
             Enabled
           </label>
-          <label class="btn btn-default">
+          <label class="btn btn-default col-xs-6">
             <input type="radio" name="status" id="disabled" autocomplete="off" value="Disabled">
             Disabled
           </label>
@@ -32,8 +36,8 @@
       </div>
     </div>
     <div class="btn-group col-xs-12">
-      <button type="submit" class="btn btn-primary col-sm-6">Create</button>
-      <button type="button" class="btn btn-default col-sm-6 close-flyout">Close</button>
+      <button type="submit" class="btn btn-primary col-xs-6">Create</button>
+      <button type="button" class="btn btn-default col-xs-6 close-flyout">Close</button>
     </div>
   </form>
 </template>
