--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -1,5 +1,5 @@
 <template name="createLocation">
-  <form method="get" class="form-horizontal">
+  <form method="get" class="form-horizontal" data-id="{{state$organizationId}}">
     <div class="form-group">
       <label class="col-sm-2 control-label">Location Name</label>
       <div class="col-sm-10">
@@ -48,13 +48,13 @@
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
-      <div class="col-sm-10">
-        <div class="btn-group" data-toggle="buttons">
-          <label class="btn btn-primary active">
+      <div class="col-sm-10 col-xs-12">
+        <div class="btn-group col-xs-12" data-toggle="buttons">
+          <label class="btn btn-primary active col-xs-6">
             <input type="radio" name="status" id="enabled" autocomplete="off" value="Enabled" checked>
             Enabled
           </label>
-          <label class="btn btn-default">
+          <label class="btn btn-default col-xs-6">
             <input type="radio" name="status" id="disabled" autocomplete="off" value="Disabled">
             Disabled
           </label>
@@ -62,8 +62,8 @@
       </div>
     </div>
     <div class="btn-group col-xs-12">
-      <button type="submit" class="btn btn-primary col-sm-6">Create</button>
-      <button type="button" class="btn btn-default col-sm-6 close-flyout">Close</button>
+      <button type="submit" class="btn btn-primary col-xs-6">Create</button>
+      <button type="button" class="btn btn-default col-xs-6 close-flyout">Close</button>
     </div>
   </form>
 </template>
