--- a/client/lib/components/organizations/organization_details/view.html
+++ b/client/lib/components/organizations/organization_details/view.html
@@ -20,6 +20,6 @@
     </div>
     <div class="row" style="display: block;"></div>
     <hr />
-    <button type="button" class="btn btn-danger btn-block delete-organization">Delete Organisation</button>
+    <button type="button" class="btn btn-danger btn-block delete-organization" data-id="{{state$organizationId}}">Delete Organisation</button>
   </div>
 </template>
