--- a/client/lib/components/sales_prediction/weather_forecast/view.html
+++ b/client/lib/components/sales_prediction/weather_forecast/view.html
@@ -5,7 +5,7 @@
         <div class="weather-icon-wrapper">
           <img src="http://openweathermap.org/img/w/{{icon}}.png">
         </div>
-        {{main}}, {{temp}}&deg;C
+        {{main}}, {{state$roundedTemperature}}&deg;C
       {{/with}}
     {{else}}
       <i>No weather data</i>
