--- a/client/lib/components/organizations/areas/area_settings/view.html
+++ b/client/lib/components/organizations/areas/area_settings/view.html
@@ -1,4 +1,4 @@
 <template name="areaSettings">
-  <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}">{{state$area.name}}</h1>
+  <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}" data-display="false">{{state$area.name}}</h1>
   <button class="btn btn-danger col-xs-12 delete-area" data-id="{{state$area._id}}">Delete Area</button>
 </template>
