--- a/client/lib/components/navigations/top/flyouts/view.html
+++ b/client/lib/components/navigations/top/flyouts/view.html
@@ -1,5 +1,5 @@
 <template name="flyouts">
-  {{> render component="generalFlyout" title="Profile" renderComponent="profileFlyoutLinks"}}
+  {{> render component="generalFlyout" title=state$profileName renderComponent="profileFlyoutLinks"}}
   {{> render component="generalFlyout" title="My Profile" renderComponent="profileFlyout"}}
   {{> render component="generalFlyout" title="Create Organization" renderComponent="createOrganizationPage"}}
 
@@ -11,5 +11,9 @@
     {{> render component="generalFlyout" title="Add Area" renderComponent="createArea"}}
     {{> render component="generalFlyout" title="Location Settings" renderComponent="locationSettings"}}
     {{> render component="generalFlyout" title="Area Settings" renderComponent="areaSettings"}}
+
+    {{#if state$isOrganizationOwner}}
+      {{> render component="generalFlyout" title="Users" renderComponent="usersPermission"}}
+    {{/if}}
   {{/if}}
 </template>
