fixing user name with first and last name

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -20,7 +20,7 @@
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <span class="clear">
                   <span class="block m-t-xs">
-                    <strong class="font-bold">{{currentUser.username}}</strong>
+                    <strong class="font-bold">{{username currentUser._id}}</strong>
                   </span>
                   <span class="text-muted text-xs block">{{state$userType}}
                     <b class="caret"></b>
