--- a/client/lib/components/dashboard/commenttopost/view.html
+++ b/client/lib/components/dashboard/commenttopost/view.html
@@ -4,7 +4,7 @@
             <img src="{{state$commentprofileimg}}" alt="image" />
         </a>
         <div class="media-body" data-id="{{state$cid}}" id="{{state$id}}">
-            <span><a href="#" class="pull-left">{{state$commentname}} &nbsp;&nbsp;</a>  {{{state$commenttext}}}</span>
+            <span><a href="#" class="pull-left">{{username state$userId}} &nbsp;&nbsp;</a>  {{{state$commenttext}}}</span>
             <a href="#" class="small like-post"><i class="fa fa-thumbs-up"></i> {{state$like}} Like this!</a> -
             <small class="text-muted">{{timeFormattedWithDate state$createdOn}}</small>
         </div>
