--- a/client/lib/components/users/profile/profile_flyout/profile_links/view.html
+++ b/client/lib/components/users/profile/profile_flyout/profile_links/view.html
@@ -17,4 +17,5 @@
       </span>
     </a>
   </ul>
+  {{> render component="generalFlyout" title="My Profile" renderComponent="profileFlyout"}}
 </template>
