--- a/client/lib/components/comments/comment/view.html
+++ b/client/lib/components/comments/comment/view.html
@@ -2,7 +2,7 @@
   <div class="chat-message">
     <img class="message-avatar" src="{{state$profilePicture}}" alt="">
     <div class="message">
-      <a class="message-author" href="#">{{state$name}}</a>
+      <a class="message-author" href="#">{{username state$createdBy}}</a>
       <span class="message-date">{{timeFormattedWithDate state$createdOn}}</span>
       <span class="message-content">{{{state$text}}}</span>
     </div>
