--- a/client/lib/components/stock/submit/view.html
+++ b/client/lib/components/stock/submit/view.html
@@ -32,13 +32,11 @@
           <div class="form-group">
             <label class="col-sm-4 control-label">Portion Ordered (b)</label>
             <div class="col-sm-6">
-              <input type="text" name="portionOrdered" class="form-control" placeholder="Add portion ordered eg: Boxes, bottles etc." >
-              <!-- <select name="unitOrdered" class="form-control">
-                <option selected="selected">packets</option>
-                <option>boxes</option>
-                <option>bottles</option>
-                <option>etc...</option>
-              </select> -->
+              <select name="portionOrdered" class="form-control">
+                {{#each state$unitsOrdered}}
+                  <option>{{unit}}</option>
+                {{/each}}
+              </select>
             </div>
           </div>
           <div class="form-group">
@@ -53,14 +51,11 @@
           <div class="form-group">
             <label class="col-sm-4 control-label">Portion Used (a)</label>
             <div class="col-sm-6 ">
-              <input type="text" name="portionUsed" class="form-control" placeholder="Portion used eg: kg, g" >
-              <!-- <select name="portionUsed" class="form-control">
-                <option>kg (kilo grams)</option>
-                <option selected="selected">g (grams)</option>
-                <option>mg (mili grams)</option>
-                <option>ml (mili liters)</option>
-                <option>l (liters)</option>
-              </select> -->
+              <select name="portionUsed" class="form-control">
+                {{#each state$unitsUsed}}
+                <option>{{unit}}</option>
+                {{/each}}
+              </select>
             </div>
           </div>
           <div class="form-group">
