added auto add ing items to job submit

--- a/client/lib/components/stock/items/edit/view.html
+++ b/client/lib/components/stock/items/edit/view.html
@@ -3,7 +3,7 @@
     <td>{{state$item.code}}</td>
     <td>{{state$item.description}}</td>
     <td>{{state$item.portionUsed}}</td>
-    <td>$ {{state$item.costPerPortionUsed}}</td>
+    <td>$ {{state$unitPrice}}</td>
     <td><input name="ing_qty" data-id="{{state$item._id}}" value="{{state$quantity}}" type="text"/></td>
     <td>
       <button type="button" class="btn btn-outline btn-xs btn-danger removeIng" data-id="{{state$item._id}}">
