--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -35,7 +35,7 @@
   <!-- INGREDIENTS LIST-->
   {{#if canViewStock}}
   <div class="modal fade" id="ingredientsListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    {{> render component = 'showIngredientsList' name="editJob"}}
+    {{> render component = 'stocksModalList' name="editJob"}}
   </div>
   {{/if}}
   <!-- /INGREDIENTS LIST -->
