added auto add ing items to job submit

--- a/client/lib/components/stock/modal_list/stock_list/view.html
+++ b/client/lib/components/stock/modal_list/stock_list/view.html
@@ -22,7 +22,7 @@
               </thead>
              <tbody>
                 {{#each state$getIngredients}}
-                  {{> render component='stockModalItem' stock=this}}
+                  {{> render component='stockModalItem' stock=this name=state$name}}
                 {{/each}}
               </tbody>
 
