--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -105,18 +105,10 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th>
-                        Name
-                      </th>
-                      <th>
-                        Active Time (mins)
-                      </th>
-                      <th>
-                        Portions
-                      </th>
-                      <th>
-                        Shelf Life
-                      </th>
+                      <th>Name</th>
+                      <th>Active Time (mins)</th>
+                      <th>Portions</th>
+                      <th>Shelf Life</th>
                     </tr>
                   </thead>
                   {{# each state$relatedJobs}}
@@ -127,15 +119,9 @@
                             {{name}}
                           </a>
                         </td>
-                        <td>
-                          {{state$convertTime activeTime}}
-                        </td>
-                        <td>
-                          {{portions}}
-                        </td>
-                        <td>
-                          {{shelfLife}}
-                        </td>
+                        <td>{{state$convertTime activeTime}}</td>
+                        <td>{{portions}}</td>
+                        <td>{{shelfLife}}</td>
                       </tr>
                     </tbody>
                   {{/ each}}
