remove line spacing

--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -119,15 +119,9 @@
                             {{name}}
                           </a>
                         </td>
-                        <td>
-                          {{state$convertTime activeTime}}
-                        </td>
-                        <td>
-                          {{portions}}
-                        </td>
-                        <td>
-                          {{shelfLife}}
-                        </td>
+                        <td>{{state$convertTime activeTime}}</td>
+                        <td>{{portions}}</td>
+                        <td>{{shelfLife}}</td>
                       </tr>
                     </tbody>
                   {{/ each}}
