--- a/client/lib/components/roster/weekly/bottom/shift_basic/view.html
+++ b/client/lib/components/roster/weekly/bottom/shift_basic/view.html
@@ -1,6 +1,6 @@
 <template name="shiftBasic">
   <div class="hidden-success-box">
-    <li class="success-element" data-id="{{state$shift._id}}" data-origin="{{state$thisorigin}}">
+    <li class="success-element" data-id="{{state$shift._id}}" data-origin="{{state$thisorigin}}" data-order="{{state$shift.order}}">
       {{#if state$isUserPermitted}}
       <div class="box-wrapper pull-right" style="display: none;">
         <span class="box-remove glyphicon glyphicon-remove removeRosterBox"></span>
