added upload profile picture facility

--- a/client/lib/components/users/profile/profile/view.html
+++ b/client/lib/components/users/profile/profile/view.html
@@ -5,9 +5,7 @@
         <h5>Profile Detail</h5>
       </div>
       <div>
-        <div class="ibox-content no-padding border-left-right">
-          <img alt="image" class="img-responsive" src="{{state$image}}">
-        </div>
+        {{> render component = "profileImage" id=state$basic._id}}
         <div class="ibox-content profile-content">
           <h4>
             <strong>
